--- a/meta/Project report N32.ipynb
+++ b/meta/Project report N32.ipynb
@@ -302,7 +302,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![Biểu đồ về thể loại](../data/chart_genre.png)\n",
+    "![Biểu đồ về thể loại](../meta/chart_genre.png)\n",
     "- Dữ liệu phản ánh đúng xu hướng thị trường âm nhạc Việt khi V-Pop và Pop chiếm tỷ trọng lớn nhất. Điều này đảm bảo hệ thống sẽ gợi ý tốt cho đại đa số người dùng phổ thông.\n",
     "- Các thể loại ngách hơn như Quan họ, Bolero, Rock có số lượng ít hơn nhưng vẫn hiện diện, đảm bảo tính đa dạng của không gian tìm kiếm."
    ]
@@ -311,7 +311,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![Biểu đồ tâm trạng](../data/chart_mood.png)\n",
+    "![Biểu đồ tâm trạng](../meta/chart_mood.png)\n",
     "- Các nhãn \"Buồn\" và \"Sôi động\" chiếm ưu thế. Điều này phù hợp với hai nhu cầu nghe nhạc chính: tìm sự đồng cảm (khi buồn) và giải trí/khuấy động (khi vui).\n",
     "- Sự phân bố này cho phép các luật suy diễn (Inference Rules) hoạt động hiệu quả, vì các luật tập trung nhiều vào việc map Mood -> Genre.\n"
    ]
@@ -320,7 +320,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![Biểu đồ hoạt động](../data/chart_activity.png)\n",
+    "![Biểu đồ hoạt động](../meta/chart_activity.png)\n",
     "- Nhãn \"Suy ngẫm\" và \"Lái xe\" có tần suất xuất hiện cao nhất. Đây là các bối cảnh (Context) mà người dùng thường xuyên cần nhạc nền (Background music) nhất.\n",
     "- Dữ liệu này cho thấy hệ thống MUSEEK không chỉ dựa vào cảm xúc nội tại mà còn hỗ trợ tốt cho các tác vụ bên ngoài (Context-aware recommendation)."
    ]
@@ -329,7 +329,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![Cơ sở tri thức](../data/chart_rules_analysis.png)\n",
+    "![Cơ sở tri thức](../meta/chart_rules_analysis.png)\n",
     "- Hệ thống dành sự ưu tiên cao nhất cho EDM (21 luật) và Hiphop (20 luật). Điều này cho thấy tập luật tập trung mạnh vào việc nắm bắt các bối cảnh cần năng lượng cao (như Party, Lái xe) hoặc sự cá tính.\n",
     "- Các thể loại phổ biến như Ballad, Pop, R&B và thậm chí cả dòng nhạc truyền thống như Quan họ đều có số lượng luật tương đương nhau (~19 luật). Sự phân bố đồng đều này chứng tỏ hệ thống có khả năng cân bằng (balanced recommendation), không bị thiên lệch quá mức vào một dòng nhạc thị trường nào, giúp tăng tính khám phá (serendipity) cho người dùng.\n",
     "- V-Pop tuy chiếm số lượng bài hát lớn trong dữ liệu (như biểu đồ 1) nhưng số lượng luật dẫn lại thấp hơn (15 luật). Điều này có nghĩa là V-Pop thường được gợi ý như một kết quả phụ (fallback) hoặc thông qua việc kết hợp với các dòng nhạc khác, thay vì được hard-code cứng nhắc trong mọi tình huống."
