--- a/meta/Project report N32.ipynb
+++ b/meta/Project report N32.ipynb
@@ -625,7 +625,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![So sánh hiệu năng](../meta/chart_benchmark.png)\n",
+    "![So sánh hiệu năng](../meta/benchmark.png)\n",
     "- Thử nghiệm: Chạy 50 lần trên cùng input (Mood: Buồn, Activity: Suy ngẫm, Genre: Ballad).\n",
     "- Kết quả: Custom Engine đạt tốc độ xử lý nhanh nhất (~0.00030 giây).\n",
     "- Lý do: Do được tối ưu hóa riêng cho cấu trúc dữ liệu bài hát, loại bỏ các overhead nạp thư viện nặng nề của Experta hay Rule-Engine.\n",
